Replaced <div> for <main>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>(User's Initial)</div>
   </header>
 
-  <div>
+  <main>
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Googleのロゴ画像">
     <form>
       <input type="text">
@@ -25,7 +25,7 @@
         <button>I'm feeling Lucky</button>
       </div>
     </form>
-  </div>
+  </main>
 
   <footer>
     <ul>
